# ai_news

./: Dockerfile  README.md  docker_run.sh  fetch_news.py  index.html  main.py  nginx.conf  pyproject.toml  run.sh  server.py  styles.css
backend/: fetch_news.py  server.py
data/: news_2025-08-22.json
frontend/: index.html  script.js
